[gd_scene load_steps=22 format=2]

[ext_resource path="res://GodotComp2-main/Art/scientist animation.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://GodotComp2-main/Art/scientist attack animation.png" type="Texture" id=4]
[ext_resource path="res://GodotComp2-main/Art/scientist jump animation.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 534.498, 380 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 100 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 100 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 100 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 100 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 65, 100 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 65, 0, 65, 100 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 130, 0, 65, 100 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 100 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 100 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "jump",
"speed": 2.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "walk",
"speed": 2.0
} ]

[sub_resource type="Animation" id=13]
resource_name = "damage"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.998039, 0.988235, 0.988235, 1 ), Color( 0.976471, 0.247059, 0.247059, 1 ), Color( 0.998039, 0.988235, 0.988235, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "rest"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
resource_name = "visible"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("body:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 65, 0, 65, 100 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 26 ) ],
"loop": true,
"name": "die",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 65.9999, -35.0002 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 51.3026, -7 )
scale = Vector2( 10.9324, 11.625 )
frames = SubResource( 4 )
animation = "attack"
playing = true

[node name="Camera2D" parent="." instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 13 )
anims/rest = SubResource( 15 )
anims/visible = SubResource( 14 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="body" type="Node2D" parent="."]
modulate = Color( 0.998039, 0.988235, 0.988235, 1 )
position = Vector2( -5, -3 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 55, -62 )
scale = Vector2( 10.3808, 9.35 )
frames = SubResource( 27 )
animation = "die"

[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
